Prevent JSON div from getting too big and moving

--- a/web/style/main.css
+++ b/web/style/main.css
@@ -77,14 +77,6 @@ pre {
   padding: 0 1em;
   float: left;
   text-align: left;
-}
-
-.calltoaction {
-  clear: both;
-  margin: 2em 0em;
-  text-align: center;
-  color: #ffffff;
-  font-weight: bold;
-  background-color: #ff6900;
+  max-width: 50%;
 }
 
